--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<p style="font-family:arial;">What's the matter?</p>
+<!DOCTYPE html>
+<html>
+  <meta charset="tuf-8">
+  <title>Personal</title>
+<body>
+  <p style="font-family:arial;">What's the matter?</p>
+</body>
+</html>
