--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <meta charset="tuf-8">
   <title>Personal</title>
 <body>
-  <p style="font-family:arial;">Hi!... what's the matter?</p>
+  <p style="font-family:serif;">Hi!... what's the matter?</p>
 </body>
 </html>
