--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <meta charset="tuf-8">
-  <title>Personal</title>
+<head>
+  <meta charset="utf-8">
+  <title>Ricardo E. Melchor-Velásquez</title>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
+
+  <style>
+    body {
+      font-family: "PT Serif", serif;
+      font-size: 1em;
+      line-height: 1.5em;
+    }
+  </style>
+</head>
 <body>
   <p style="font-family:serif;">Hi!... what's the matter?</p>
 </body>
