--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </style>
 </head>
 <body>
-  <p style="font-family:serif;">Hi!... what's the matter?</p>
+  <p>Hi!... what's the matter?</p>
 </body>
 </html>
