--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Ricardo E. Melchor-Velásquez</title>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
+    <title>Ricardo E. Melchor-Velásquez</title>
 
-  <style>
-    body {
-      font-family: "PT Serif", serif;
-      font-size: 1em;
-      line-height: 1.5em;
-    }
-  </style>
-</head>
-<body>
-  <p>Hi!... what's the matter?</p>
-</body>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
+
+    <style>
+      body {
+        font-family: "PT Serif", serif;
+        font-size: 1em;
+        line-height: 1.5em;
+      }
+    </style>
+  </head>
+  <body>
+    <p>Hi!... what's the matter?</p>
+  </body>
 </html>
