--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ricardo E. Melchor-Velásquez</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
+    <link rel="shortcut icon" href="img/favicon.png" />
 
     <style>
       body {
