--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Ricardo E. Melchor-Velásquez</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
-    <link rel="shortcut icon" href="/img/favicon.png" />
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.png" />
 
     <style>
       body {
